--- a/index.html
+++ b/index.html
@@ -1,256 +1,244 @@
-<iframe src="https://www.host-ai.site" width="500" height="500" allowfullscreen></iframe>
 <!DOCTYPE html>
 <html lang="ru">
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Портфолио фотографа</title>
+<title>Фотограф Леус Андрей</title>
 
 <style>
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap');
+
+* {
+    box-sizing: border-box;
+}
 
 body {
     margin: 0;
     font-family: 'Montserrat', sans-serif;
-    background: #f5f5f5;
-    color: #222;
-    scroll-behavior: smooth;
+    background: #111;
+    color: #fff;
 }
 
 /* HEADER */
 header {
-    background: linear-gradient(135deg, #ff7eb3, #ff758c);
-    color: #fff;
+    height: 100vh;
+    background: linear-gradient(135deg, #ff512f, #dd2476);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     text-align: center;
-    padding: 120px 20px 60px;
+    padding: 20px;
 }
+
 header h1 {
-    font-size: 3em;
+    font-size: 3.5em;
     margin-bottom: 10px;
 }
+
 header p {
-    font-size: 1.3em;
+    font-size: 1.4em;
+    opacity: 0.9;
 }
 
 /* NAV */
 nav {
-    display: flex;
-    justify-content: center;
-    background: #222;
     position: sticky;
     top: 0;
-    z-index: 100;
+    background: #000;
+    display: flex;
+    justify-content: center;
+    z-index: 10;
 }
+
 nav a {
     color: #fff;
     padding: 15px 25px;
     text-decoration: none;
     transition: 0.3s;
 }
+
 nav a:hover {
-    background: #ff758c;
-    border-radius: 6px;
+    background: #ff512f;
 }
 
 /* SECTIONS */
 section {
-    max-width: 1000px;
-    margin: 60px auto;
-    padding: 60px 20px;
-    border-radius: 15px;
-    opacity: 0;
-    transform: translateY(30px);
-    transition: 0.6s ease-out;
+    padding: 80px 20px;
+    max-width: 1100px;
+    margin: auto;
 }
-section.visible {
-    opacity: 1;
-    transform: translateY(0);
-}
+
 h2 {
     text-align: center;
-    margin-bottom: 40px;
-    font-size: 2.2em;
+    margin-bottom: 50px;
+    font-size: 2.5em;
+    color: #ff512f;
 }
 
-/* COLORS FOR SECTIONS */
-#about { background: #ffeef7; }
-#portfolio { background: #e7f0ff; }
-#prices { background: #fff8e7; }
-#reviews { background: #e7ffe7; }
-#contacts { background: #f0e7ff; }
+/* ABOUT */
+#about p {
+    font-size: 1.2em;
+    line-height: 1.7;
+    text-align: center;
+}
 
-/* PORTFOLIO GRID */
-.portfolio-grid {
+/* PORTFOLIO */
+.portfolio {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px,1fr));
-    gap: 20px;
+    grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+    gap: 25px;
 }
-.portfolio-grid img {
+
+.card {
+    position: relative;
+    overflow: hidden;
+    border-radius: 15px;
+}
+
+.card img {
     width: 100%;
-    height: 250px;
+    height: 320px;
     object-fit: cover;
-    border-radius: 12px;
-    box-shadow: 0 5px 15px rgba(0,0,0,0.1);
-    transition: transform 0.3s, box-shadow 0.3s;
-    cursor: pointer;
-}
-.portfolio-grid img:hover {
-    transform: scale(1.05);
-    box-shadow: 0 12px 25px rgba(0,0,0,0.2);
+    transition: transform 0.5s;
 }
 
-/* PRICE AND REVIEWS */
-.price-item, .review-item {
-    background: #fff;
-    padding: 25px;
+.card:hover img {
+    transform: scale(1.1);
+}
+
+.card span {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    padding: 15px;
+    background: rgba(0,0,0,0.7);
+    text-align: center;
+    font-size: 1.2em;
+}
+
+/* PRICES */
+.price {
+    background: #1b1b1b;
+    padding: 30px;
+    border-radius: 15px;
     margin-bottom: 20px;
-    border-radius: 12px;
-    box-shadow: 0 5px 20px rgba(0,0,0,0.1);
-    transition: transform 0.3s;
-}
-.price-item:hover, .review-item:hover {
-    transform: translateY(-5px);
 }
 
-/* FORM */
-form input, form textarea {
-    width: 100%;
-    padding: 12px;
+.price h3 {
+    color: #ff512f;
+}
+
+/* REVIEWS */
+.review {
+    background: #1b1b1b;
+    padding: 25px;
+    border-radius: 15px;
     margin-bottom: 15px;
-    border-radius: 6px;
-    border: 1px solid #ccc;
-    transition: 0.3s;
-}
-form input:focus, form textarea:focus {
-    border-color: #ff758c;
-    outline: none;
-}
-form button {
-    padding: 12px 25px;
-    background: #ff758c;
-    color: #fff;
-    border: none;
-    border-radius: 6px;
-    cursor: pointer;
-    transition: 0.3s;
-}
-form button:hover {
-    background: #ff4b6b;
 }
 
-/* CONTACT LINKS */
-#contacts a {
-    color: #ff758c;
-    text-decoration: none;
-    transition: 0.3s;
-}
-#contacts a:hover {
-    text-decoration: underline;
+/* CONTACTS */
+#contacts p {
+    text-align: center;
+    font-size: 1.2em;
 }
 
 /* FOOTER */
 footer {
+    background: #000;
     text-align: center;
-    padding: 30px 20px;
-    background: #222;
-    color: #fff;
+    padding: 30px;
+    margin-top: 60px;
 }
 </style>
 </head>
 <body>
 
 <header>
-    <h1>Фотограф Леус Андрей</h1>
-    <p>18 лет опыта. Люблю фотографировать на фоне взрывов!</p>
+    <h1>Леус Андрей</h1>
+    <p>18 лет опыта • Экшн-фотография • Взрывы - мой стиль</p>
 </header>
 
 <nav>
-    <a href="#about">О фотографе</a>
+    <a href="#about">Обо мне</a>
     <a href="#portfolio">Портфолио</a>
-    <a href="#prices">Прайс-лист</a>
+    <a href="#prices">Цены</a>
     <a href="#reviews">Отзывы</a>
     <a href="#contacts">Контакты</a>
 </nav>
 
 <section id="about">
     <h2>О фотографе</h2>
-    <p>Привет! Я Леус Андрей, профессиональный фотограф с 18-летним опытом. Моя страсть — динамичные и эпические кадры, особенно на фоне взрывов и экшн-сцен. Мой стиль сочетает художественный подход и смелые композиции, которые поражают эмоциями.</p>
+    <p>
+        Меня зовут Леус Андрей. Я профессиональный фотограф с 18-летним опытом.
+        Моя специализация - экшн-фотография, динамика, адреналин и кадры
+        на фоне взрывов. Я создаю изображения, которые невозможно забыть. Мой девиз: И на груди его могучей, три волоса казались кучей!
+    </p>
 </section>
 
 <section id="portfolio">
     <h2>Портфолио</h2>
-    <div class="portfolio-grid">
-        <img src="https://via.placeholder.com/400x300/ff9ec6/000000?text=Экшн1" alt="Экшн1">
-        <img src="https://via.placeholder.com/400x300/80dfff/000000?text=Экшн2" alt="Экшн2">
-        <img src="https://via.placeholder.com/400x300/80ff80/000000?text=Экшн3" alt="Экшн3">
-        <img src="https://via.placeholder.com/400x300/ffd280/000000?text=Экшн4" alt="Экшн4">
+    <div class="portfolio">
+        <div class="card">
+            <img src="action1.jpg" alt="Экшн 1">
+            <span>Андрей Анапа 2007</span>
+        </div>
+        <div class="card">
+            <img src="action2.jpg" alt="Экшн 2">
+            <span>андрей Адлер 2010</span>
+        </div>
     </div>
 </section>
 
 <section id="prices">
     <h2>Прайс-лист</h2>
-    <div class="price-item">
-        <h3>Экшн-съемка</h3>
-        <p>От 30 000 ₽ — съемка динамичных сцен, 100+ обработанных фото с эффектами.</p>
+    <div class="price">
+        <h3>Экшн-съёмка</h3>
+        <p>от 30 000 ₽ - взрывы, спецэффекты, крутецкая обработка</p>
     </div>
-    <div class="price-item">
-        <h3>Стандартная съемка</h3>
-        <p>От 10 000 ₽ — 2 часа съемки, 30+ профессионально обработанных фото.</p>
+    <div class="price">
+        <h3>Индивидуальная съёмка</h3>
+        <p>от 12 000 ₽ - креативный подход и авторский стиль</p>
     </div>
 </section>
 
 <section id="reviews">
-    <h2>Отзывы клиентов</h2>
-    <div id="reviews-list">
-        <div class="review-item">
-            <strong>Игорь К.</strong>
-            <p>Невероятные кадры, особенно сцены с эффектами! Леус — мастер экшн-фотографии.</p>
-        </div>
+    <h2>Отзывы</h2>
+    <div class="review">
+        <strong>Игорь</strong>
+        <p>Это не просто фото — это кино. Взрывы выглядят нереально.</p>		  <p>. . . . . . . . . . .,'´`. ,'``;
+. . . . . . . . . .,`. . .`—–'..
+. . . . . . . . . .,. . . . . .~ .`- .
+. . . . . . . . . ,'. . . . . . . .o. .o__
+. . . . . . . . _l. . . . . . . . . . . .
+. . . . . . . _. '`~-.. . . . . . . . . .,'
+. . . . . . .,. .,.-~-.' -.,. . . ..'–~`
+. . . . . . /. ./. . . . .}. .` -..,/
+. . . . . /. ,'___. . :/. . . . . .
+. . . . /'`-.l. . . `'-..'........ . .
+. . . ;. . . . . . . . . . . . .)-.....l
+. . .l. . . . .' —........-'. . . ,'
+. . .',. . ,....... . . . . . . . . .,'
+. . . .' ,/. . . . `,. . . . . . . ,'_____
+. . . . .. . . . . .. . . .,.- '_______|_')
+. . . . . ',. . . . . ',-~'`. (.))
+. . . . . .l. . . . . ;. . . /__
+. . . . . /. . . . . /__. . . . .)
+. . . . . '-.. . . . . . .)
+. . . . . . .' - .......-`</p>
     </div>
-    <form id="review-form">
-        <input type="text" id="reviewer-name" placeholder="Ваше имя" required>
-        <textarea id="review-text" placeholder="Ваш отзыв" rows="3" required></textarea>
-        <button type="submit">Отправить отзыв</button>
-    </form>
 </section>
 
 <section id="contacts">
     <h2>Контакты</h2>
-    <p>Телефон: +7 999 987-65-43</p>
-    <p>Email: leus@example.com</p>
-    <p>Соцсети: <a href="#">Instagram</a>, <a href="#">VK</a></p>
+    <p>Телефон: +7 932 099-90-55</p>
+    <p>Email: deniskaklim6@gmail.com</p>
 </section>
 
 <footer>
-    <p>© 2026 Фотограф Леус Андрей</p>
+    © 2026 • Леус Андрей • Экшн-фотограф
 </footer>
-
-<script>
-// Появление секций при скролле
-document.addEventListener('DOMContentLoaded', () => {
-    const sections = document.querySelectorAll('section');
-    const observer = new IntersectionObserver(entries => {
-        entries.forEach(entry => {
-            if(entry.isIntersecting) entry.target.classList.add('visible');
-        });
-    }, { threshold: 0.1 });
-    sections.forEach(section => observer.observe(section));
-
-    // Форма отзывов
-    const form = document.getElementById('review-form');
-    const reviewsList = document.getElementById('reviews-list');
-    form.addEventListener('submit', e => {
-        e.preventDefault();
-        const name = document.getElementById('reviewer-name').value;
-        const text = document.getElementById('review-text').value;
-        const reviewItem = document.createElement('div');
-        reviewItem.classList.add('review-item');
-        reviewItem.innerHTML = `<strong>${name}</strong><p>${text}</p>`;
-        reviewsList.appendChild(reviewItem);
-        form.reset();
-    });
-});
-</script>
 
 </body>
 </html>
