--- a/index.html
+++ b/index.html
@@ -173,7 +173,8 @@ footer {
     <p>
         Меня зовут Леус Андрей. Я профессиональный фотограф с 18-летним опытом.
         Моя специализация - экшн-фотография, динамика, адреналин и кадры
-        на фоне взрывов. Я создаю изображения, которые невозможно забыть. Мой девиз: И на груди его могучей, три волоса казались кучей!
+        на фоне взрывов. Я создаю изображения, которые невозможно забыть.
+        Мой девиз: И на груди его могучей, три волоса казались кучей!
     </p>
 </section>
 
@@ -186,7 +187,7 @@ footer {
         </div>
         <div class="card">
             <img src="action2.jpg" alt="Экшн 2">
-            <span>андрей Адлер 2010</span>
+            <span>Андрей Адлер 2010</span>
         </div>
     </div>
 </section>
@@ -207,26 +208,7 @@ footer {
     <h2>Отзывы</h2>
     <div class="review">
         <strong>Игорь</strong>
-        <p>Это не просто фото — это кино. Взрывы выглядят нереально.</p>		  <p>. . . . . . . . . . .,'´`. ,'``;
-. . . . . . . . . .,`. . .`—–'..
-. . . . . . . . . .,. . . . . .~ .`- .
-. . . . . . . . . ,'. . . . . . . .o. .o__
-. . . . . . . . _l. . . . . . . . . . . .
-. . . . . . . _. '`~-.. . . . . . . . . .,'
-. . . . . . .,. .,.-~-.' -.,. . . ..'–~`
-. . . . . . /. ./. . . . .}. .` -..,/
-. . . . . /. ,'___. . :/. . . . . .
-. . . . /'`-.l. . . `'-..'........ . .
-. . . ;. . . . . . . . . . . . .)-.....l
-. . .l. . . . .' —........-'. . . ,'
-. . .',. . ,....... . . . . . . . . .,'
-. . . .' ,/. . . . `,. . . . . . . ,'_____
-. . . . .. . . . . .. . . .,.- '_______|_')
-. . . . . ',. . . . . ',-~'`. (.))
-. . . . . .l. . . . . ;. . . /__
-. . . . . /. . . . . /__. . . . .)
-. . . . . '-.. . . . . . .)
-. . . . . . .' - .......-`</p>
+        <p>Это не просто фото — это кино. Взрывы выглядят нереально. Письки, сиськи, взрыв пиписьки</p>
     </div>
 </section>
 
@@ -237,7 +219,7 @@ footer {
 </section>
 
 <footer>
-    © 2026 • Леус Андрей • Экшн-фотограф
+    © 2026 • Леус Андрей • Экшн-фотограф • Секс символ И11—25—11
 </footer>
 
 </body>
