--- a/index.html
+++ b/index.html
@@ -211,11 +211,25 @@ footer {
         <p>Это не просто фото — это кино. Взрывы выглядят нереально. Письки, сиськи, взрыв пиписьки</p>
     </div>
 </section>
-
 <section id="contacts">
     <h2>Контакты</h2>
     <p>Телефон: +7 932 099-90-55</p>
     <p>Email: deniskaklim6@gmail.com</p>
+    
+    <div class="socials">
+        <a href="https://t.me/oblomoff12345" target="_blank">
+            <img src="https://cdn-icons-png.flaticon.com/512/2111/2111646.png" alt="Telegram" class="social-icon">
+        </a>
+        <a href="https://vk.com/uglykiddo" target="_blank">
+            <img src="https://cdn-icons-png.flaticon.com/512/145/145813.png" alt="VK" class="social-icon">
+        </a>
+        <a href="https://www.tiktok.com/@corner_lie" target="_blank">
+            <img src="https://cdn-icons-png.flaticon.com/512/3046/3046128.png" alt="TikTok" class="social-icon">
+        </a>
+    </div>
+</section>
+ 
+    
 </section>
 
 <footer>
