--- a/index.html
+++ b/index.html
@@ -175,6 +175,7 @@ footer {
         Моя специализация - экшн-фотография, динамика, адреналин и кадры
         на фоне взрывов. Я создаю изображения, которые невозможно забыть.
         Мой девиз: И на груди его могучей, три волоса казались кучей!
+        Если ты это видишь, меня съел какашечный монстр! 
     </p>
 </section>
 
@@ -196,11 +197,11 @@ footer {
     <h2>Прайс-лист</h2>
     <div class="price">
         <h3>Экшн-съёмка</h3>
-        <p>от 30 000 ₽ - взрывы, спецэффекты, крутецкая обработка</p>
+        <p>от 30 000 тенге - взрывы, спецэффекты, крутецкая обработка</p>
     </div>
     <div class="price">
         <h3>Индивидуальная съёмка</h3>
-        <p>от 12 000 ₽ - креативный подход и авторский стиль</p>
+        <p>от 12 000 доляров - креативный подход и авторский стиль</p>
     </div>
 </section>
 
