--- a/index.html
+++ b/index.html
@@ -5,12 +5,20 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Фотограф Леус Андрей</title>
 
+<!-- ===== PWA MANIFEST (INLINE) ===== -->
+<link rel="manifest" href="data:application/json,{
+  &quot;name&quot;:&quot;Леус Андрей — Экшн-фотограф&quot;,
+  &quot;short_name&quot;:&quot;LeusPhoto&quot;,
+  &quot;start_url&quot;:&quot;.&quot;,
+  &quot;display&quot;:&quot;standalone&quot;,
+  &quot;background_color&quot;:&quot;#000000&quot;,
+  &quot;theme_color&quot;:&quot;#ff512f&quot;
+}">
+
 <style>
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap');
 
-* {
-    box-sizing: border-box;
-}
+* { box-sizing: border-box; }
 
 body {
     margin: 0;
@@ -24,21 +32,9 @@ header {
     height: 100vh;
     background: linear-gradient(135deg, #ff512f, #dd2476);
     display: flex;
-    flex-direction: column;
     justify-content: center;
     align-items: center;
     text-align: center;
-    padding: 20px;
-}
-
-header h1 {
-    font-size: 3.5em;
-    margin-bottom: 10px;
-}
-
-header p {
-    font-size: 1.4em;
-    opacity: 0.9;
 }
 
 /* NAV */
@@ -55,11 +51,6 @@ nav a {
     color: #fff;
     padding: 15px 25px;
     text-decoration: none;
-    transition: 0.3s;
-}
-
-nav a:hover {
-    background: #ff512f;
 }
 
 /* SECTIONS */
@@ -76,13 +67,6 @@ h2 {
     color: #ff512f;
 }
 
-/* ABOUT */
-#about p {
-    font-size: 1.2em;
-    line-height: 1.7;
-    text-align: center;
-}
-
 /* PORTFOLIO */
 .portfolio {
     display: grid;
@@ -90,58 +74,21 @@ h2 {
     gap: 25px;
 }
 
-.card {
-    position: relative;
-    overflow: hidden;
-    border-radius: 15px;
-}
-
 .card img {
     width: 100%;
     height: 320px;
     object-fit: cover;
-    transition: transform 0.5s;
 }
 
-.card:hover img {
-    transform: scale(1.1);
+/* SOCIALS */
+.socials {
+    display: flex;
+    justify-content: center;
+    gap: 20px;
 }
 
-.card span {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    padding: 15px;
-    background: rgba(0,0,0,0.7);
-    text-align: center;
-    font-size: 1.2em;
-}
-
-/* PRICES */
-.price {
-    background: #1b1b1b;
-    padding: 30px;
-    border-radius: 15px;
-    margin-bottom: 20px;
-}
-
-.price h3 {
-    color: #ff512f;
-}
-
-/* REVIEWS */
-.review {
-    background: #1b1b1b;
-    padding: 25px;
-    border-radius: 15px;
-    margin-bottom: 15px;
-}
-
-/* CONTACTS */
-#contacts p {
-    text-align: center;
-    font-size: 1.2em;
+.social-icon {
+    width: 40px;
 }
 
 /* FOOTER */
@@ -149,93 +96,158 @@ footer {
     background: #000;
     text-align: center;
     padding: 30px;
-    margin-top: 60px;
+}
+
+/* BUTTONS */
+#musicBtn, #adminBtn {
+    position: fixed;
+    bottom: 20px;
+    padding: 12px 18px;
+    border-radius: 25px;
+    border: none;
+    cursor: pointer;
+    z-index: 100;
+}
+
+#musicBtn {
+    left: 20px;
+    background: #222;
+    color: #fff;
+}
+
+#adminBtn {
+    right: 20px;
+    background: #ff512f;
+    color: #fff;
 }
 </style>
 </head>
+
 <body>
 
+<!-- 🎵 ФОНОВАЯ МУЗЫКА -->
+<audio id="bgMusic" loop>
+  <source src="https://assets.mixkit.co/music/preview/mixkit-serene-view-443.mp3" type="audio/mpeg">
+</audio>
+
+<button id="musicBtn">🔈 Музыка</button>
+<button id="adminBtn">🔐 Админка</button>
+
 <header>
-    <h1>Леус Андрей</h1>
-    <p>18 лет опыта • Экшн-фотография • Взрывы - мой стиль</p>
+  <div>
+    <h1 id="title">Леус Андрей</h1>
+    <p id="subtitle">18 лет опыта • Экшн-фотография • Взрывы - мой стиль</p>
+  </div>
 </header>
 
 <nav>
-    <a href="#about">Обо мне</a>
-    <a href="#portfolio">Портфолио</a>
-    <a href="#prices">Цены</a>
-    <a href="#reviews">Отзывы</a>
-    <a href="#contacts">Контакты</a>
+  <a href="#about">Обо мне</a>
+  <a href="#portfolio">Портфолио</a>
+  <a href="#contacts">Контакты</a>
 </nav>
 
 <section id="about">
-    <h2>О фотографе</h2>
-    <p>
-        Меня зовут Леус Андрей. Я профессиональный фотограф с 18-летним опытом.
-        Моя специализация - экшн-фотография, динамика, адреналин и кадры
-        на фоне взрывов. Я создаю изображения, которые невозможно забыть.
-        Мой девиз: И на груди его могучей, три волоса казались кучей!
-        Если ты это видишь, меня съел какашечный монстр! 
-    </p>
+<h2>О фотографе</h2>
+<p id="aboutText">
+Меня зовут Леус Андрей. Я профессиональный фотограф с 18-летним опытом.
+Моя специализация — экшн-фотография.
+</p>
 </section>
 
 <section id="portfolio">
-    <h2>Портфолио</h2>
-    <div class="portfolio">
-        <div class="card">
-            <img src="action1.jpg" alt="Экшн 1">
-            <span>Андрей Анапа 2007</span>
-        </div>
-        <div class="card">
-            <img src="action2.jpg" alt="Экшн 2">
-            <span>Андрей Адлер 2010</span>
-        </div>
-    </div>
+<h2>Портфолио</h2>
+<div class="portfolio">
+  <div class="card"><img id="img1" src="action1.jpg"></div>
+  <div class="card"><img id="img2" src="action2.jpg"></div>
+</div>
+<input type="file" id="upload" accept="image/*" style="display:none">
 </section>
 
-<section id="prices">
-    <h2>Прайс-лист</h2>
-    <div class="price">
-        <h3>Экшн-съёмка</h3>
-        <p>от 30 000 тенге - взрывы, спецэффекты, крутецкая обработка</p>
-    </div>
-    <div class="price">
-        <h3>Индивидуальная съёмка</h3>
-        <p>от 12 000 доляров - креативный подход и авторский стиль</p>
-    </div>
-</section>
-
-<section id="reviews">
-    <h2>Отзывы</h2>
-    <div class="review">
-        <strong>Игорь</strong>
-        <p>Это не просто фото — это кино. Взрывы выглядят нереально. Письки, сиськи, взрыв пиписьки</p>
-    </div>
-</section>
 <section id="contacts">
-    <h2>Контакты</h2>
-    <p>Телефон: +7 932 099-90-55</p>
-    <p>Email: deniskaklim6@gmail.com</p>
-    
-    <div class="socials">
-        <a href="https://t.me/oblomoff12345" target="_blank">
-            <img src="https://cdn-icons-png.flaticon.com/512/2111/2111646.png" alt="Telegram" class="social-icon">
-        </a>
-        <a href="https://vk.com/uglykiddo" target="_blank">
-            <img src="https://cdn-icons-png.flaticon.com/512/145/145813.png" alt="VK" class="social-icon">
-        </a>
-        <a href="https://www.tiktok.com/@corner_lie" target="_blank">
-            <img src="https://cdn-icons-png.flaticon.com/512/3046/3046128.png" alt="TikTok" class="social-icon">
-        </a>
-    </div>
-</section>
- 
-    
+<h2>Контакты</h2>
+<div class="socials">
+  <a href="https://t.me/oblomoff12345"><img class="social-icon" src="https://cdn-icons-png.flaticon.com/512/2111/2111646.png"></a>
+  <a href="https://vk.com/uglykiddo"><img class="social-icon" src="https://cdn-icons-png.flaticon.com/512/145/145813.png"></a>
+  <a href="https://www.tiktok.com/@corner_lie"><img class="social-icon" src="https://cdn-icons-png.flaticon.com/512/3046/3046128.png"></a>
+</div>
 </section>
 
 <footer>
-    © 2026 • Леус Андрей • Экшн-фотограф • Секс символ И11—25—11
+© 2026 • Леус Андрей • Экшн-фотограф
 </footer>
+
+<script>
+/* ===== МУЗЫКА ===== */
+const music = document.getElementById("bgMusic");
+const musicBtn = document.getElementById("musicBtn");
+
+if (localStorage.music === "on") {
+  music.volume = 0.2;
+  music.play();
+  musicBtn.textContent = "🔊 Музыка";
+}
+
+musicBtn.onclick = () => {
+  if (music.paused) {
+    music.volume = 0.2;
+    music.play();
+    localStorage.music = "on";
+    musicBtn.textContent = "🔊 Музыка";
+  } else {
+    music.pause();
+    localStorage.music = "off";
+    musicBtn.textContent = "🔈 Музыка";
+  }
+};
+
+/* ===== АДМИНКА ===== */
+const PASSWORD = "admin123";
+const adminBtn = document.getElementById("adminBtn");
+const upload = document.getElementById("upload");
+
+adminBtn.onclick = () => {
+  const pass = prompt("Пароль администратора:");
+  if (pass === PASSWORD) {
+    alert("Админка включена");
+    upload.style.display = "block";
+  }
+};
+
+upload.onchange = e => {
+  const file = e.target.files[0];
+  const reader = new FileReader();
+  reader.onload = () => {
+    localStorage.photo1 = reader.result;
+    document.getElementById("img1").src = reader.result;
+  };
+  reader.readAsDataURL(file);
+};
+
+if (localStorage.photo1) {
+  document.getElementById("img1").src = localStorage.photo1;
+}
+
+/* ===== PWA SERVICE WORKER (INLINE) ===== */
+if ('serviceWorker' in navigator) {
+  const swCode = `
+    self.addEventListener('install', e => {
+      e.waitUntil(
+        caches.open('site-cache').then(cache =>
+          cache.addAll(['./'])
+        )
+      );
+    });
+    self.addEventListener('fetch', e => {
+      e.respondWith(
+        caches.match(e.request).then(res => res || fetch(e.request))
+      );
+    });
+  `;
+  const blob = new Blob([swCode], {type: 'text/javascript'});
+  const swUrl = URL.createObjectURL(blob);
+  navigator.serviceWorker.register(swUrl);
+}
+</script>
 
 </body>
 </html>
