--- a/index.html
+++ b/index.html
@@ -5,53 +5,22 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Фотограф Леус Андрей</title>
 
-<!-- PWA -->
-<link rel="manifest" href="data:application/json,{
-  &quot;name&quot;:&quot;Леус Андрей — Экшн-фотограф&quot;,
-  &quot;short_name&quot;:&quot;LeusPhoto&quot;,
-  &quot;start_url&quot;:&quot;.&quot;,
-  &quot;display&quot;:&quot;standalone&quot;,
-  &quot;background_color&quot;:&quot;#000000&quot;,
-  &quot;theme_color&quot;:&quot;#ff512f&quot;
-}">
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
 
 <style>
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap');
-
 * { box-sizing: border-box; }
 
 body {
     margin: 0;
     font-family: 'Montserrat', sans-serif;
-    background: #111;
+    background: #0f0f0f;
     color: #fff;
 }
 
-/* HEADER SLIDER */
+/* HEADER */
 header {
     height: 100vh;
-    position: relative;
-    overflow: hidden;
-}
-
-.slide {
-    position: absolute;
-    inset: 0;
-    background-size: cover;
-    background-position: center;
-    opacity: 0;
-    transition: opacity 1.5s;
-}
-
-.slide.active {
-    opacity: 1;
-}
-
-.header-content {
-    position: relative;
-    z-index: 2;
-    background: rgba(0,0,0,0.55);
-    height: 100%;
+    background: linear-gradient(135deg, #ff512f, #dd2476);
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -62,10 +31,12 @@ header {
 
 header h1 {
     font-size: 3.5em;
+    margin-bottom: 10px;
 }
 
 header p {
-    font-size: 1.4em;
+    font-size: 1.3em;
+    opacity: 0.95;
 }
 
 /* NAV */
@@ -75,13 +46,14 @@ nav {
     background: #000;
     display: flex;
     justify-content: center;
-    z-index: 10;
+    z-index: 100;
 }
 
 nav a {
     color: #fff;
-    padding: 15px 25px;
+    padding: 15px 22px;
     text-decoration: none;
+    transition: 0.3s;
 }
 
 nav a:hover {
@@ -98,13 +70,13 @@ section {
 h2 {
     text-align: center;
     margin-bottom: 50px;
-    font-size: 2.5em;
+    font-size: 2.4em;
     color: #ff512f;
 }
 
 /* ABOUT */
 #about p {
-    font-size: 1.2em;
+    font-size: 1.15em;
     line-height: 1.7;
     text-align: center;
 }
@@ -118,26 +90,37 @@ h2 {
 
 .card {
     position: relative;
-    overflow: hidden;
     border-radius: 15px;
+    overflow: hidden;
 }
 
 .card img {
     width: 100%;
     height: 320px;
     object-fit: cover;
+    transition: 0.5s;
+}
+
+.card:hover img {
+    transform: scale(1.1);
+}
+
+.card span {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    padding: 12px;
+    background: rgba(0,0,0,0.7);
+    text-align: center;
 }
 
 /* PRICES */
 .price {
     background: #1b1b1b;
-    padding: 30px;
+    padding: 25px;
     border-radius: 15px;
     margin-bottom: 20px;
-}
-
-.price h3 {
-    color: #ff512f;
 }
 
 /* REVIEWS */
@@ -145,26 +128,29 @@ h2 {
     background: #1b1b1b;
     padding: 25px;
     border-radius: 15px;
-    margin-bottom: 15px;
 }
 
 /* CONTACTS */
+#contacts p {
+    text-align: center;
+    font-size: 1.1em;
+}
+
+/* SOCIALS */
 .socials {
     display: flex;
     justify-content: center;
     gap: 20px;
+    margin-top: 20px;
 }
 
-.social-icon {
-    width: 40px;
+.socials img {
+    width: 42px;
+    transition: 0.3s;
 }
 
-/* FOOTER */
-footer {
-    background: #000;
-    text-align: center;
-    padding: 30px;
-    margin-top: 60px;
+.socials img:hover {
+    transform: scale(1.2);
 }
 
 /* BUTTONS */
@@ -172,10 +158,11 @@ footer {
     position: fixed;
     bottom: 20px;
     padding: 12px 18px;
-    border-radius: 25px;
+    border-radius: 30px;
     border: none;
+    font-size: 14px;
     cursor: pointer;
-    z-index: 100;
+    z-index: 200;
 }
 
 #musicBtn {
@@ -189,27 +176,36 @@ footer {
     background: #ff512f;
     color: #fff;
 }
+
+/* ADMIN */
+#upload {
+    display: none;
+    margin-top: 30px;
+}
+
+/* FOOTER */
+footer {
+    background: #000;
+    text-align: center;
+    padding: 30px;
+    margin-top: 60px;
+}
 </style>
 </head>
 
 <body>
 
-<!-- 🎵 Музыка -->
+<!-- 🎵 MUSIC -->
 <audio id="bgMusic" loop>
-  <source src="https://assets.mixkit.co/music/preview/mixkit-serene-view-443.mp3">
+    <source src="https://assets.mixkit.co/music/preview/mixkit-serene-view-443.mp3">
 </audio>
 
-<button id="musicBtn">🔈 Музыка</button>
+<button id="musicBtn">🎵 Включить музыку</button>
 <button id="adminBtn">🔐 Админка</button>
 
 <header>
-    <div class="slide active" style="background-image:url('action1.jpg')"></div>
-    <div class="slide" style="background-image:url('action2.jpg')"></div>
-
-    <div class="header-content">
-        <h1>Леус Андрей</h1>
-        <p>18 лет опыта • Экшн-фотография • Взрывы - мой стиль</p>
-    </div>
+    <h1>Леус Андрей</h1>
+    <p>18 лет опыта • Экшн-фотография • Взрывы — мой стиль</p>
 </header>
 
 <nav>
@@ -224,29 +220,39 @@ footer {
 <h2>О фотографе</h2>
 <p>
 Меня зовут Леус Андрей. Я профессиональный фотограф с 18-летним опытом.
-Моя специализация - экшн-фотография, динамика, адреналин и кадры
+Моя специализация — экшн-фотография, динамика, адреналин и кадры
 на фоне взрывов. Я создаю изображения, которые невозможно забыть.
+Мой девиз: И на груди его могучей, три волоса казались кучей!
+Если ты это видишь — меня съел какашечный монстр!
 </p>
 </section>
 
 <section id="portfolio">
 <h2>Портфолио</h2>
+
 <div class="portfolio">
-<div class="card"><img id="img1" src="action1.jpg"></div>
-<div class="card"><img id="img2" src="action2.jpg"></div>
+    <div class="card">
+        <img id="photo1" src="action1.jpg">
+        <span>Андрей Анапа 2007</span>
+    </div>
+    <div class="card">
+        <img id="photo2" src="action2.jpg">
+        <span>Андрей Адлер 2010</span>
+    </div>
 </div>
-<input type="file" id="upload" accept="image/*" style="display:none">
+
+<input type="file" id="upload" accept="image/*">
 </section>
 
 <section id="prices">
 <h2>Прайс-лист</h2>
 <div class="price">
-<h3>Экшн-съёмка</h3>
-<p>от 30 000 тенге</p>
+    <h3>Экшн-съёмка</h3>
+    <p>от 30 000 тенге — взрывы, спецэффекты, обработка</p>
 </div>
 <div class="price">
-<h3>Индивидуальная съёмка</h3>
-<p>от 12 000 доляров</p>
+    <h3>Индивидуальная съёмка</h3>
+    <p>от 12 000 доляров — авторский стиль</p>
 </div>
 </section>
 
@@ -254,16 +260,19 @@ footer {
 <h2>Отзывы</h2>
 <div class="review">
 <strong>Игорь</strong>
-<p>Это не просто фото — это кино.</p>
+<p>Это не просто фото — это кино. Взрывы выглядят нереально.</p>
 </div>
 </section>
 
 <section id="contacts">
 <h2>Контакты</h2>
+<p>Телефон: +7 932 099-90-55</p>
+<p>Email: deniskaklim6@gmail.com</p>
+
 <div class="socials">
-<a href="https://t.me/oblomoff12345"><img class="social-icon" src="https://cdn-icons-png.flaticon.com/512/2111/2111646.png"></a>
-<a href="https://vk.com/uglykiddo"><img class="social-icon" src="https://cdn-icons-png.flaticon.com/512/145/145813.png"></a>
-<a href="https://www.tiktok.com/@corner_lie"><img class="social-icon" src="https://cdn-icons-png.flaticon.com/512/3046/3046128.png"></a>
+<a href="https://t.me/oblomoff12345" target="_blank"><img src="https://cdn-icons-png.flaticon.com/512/2111/2111646.png"></a>
+<a href="https://vk.com/uglykiddo" target="_blank"><img src="https://cdn-icons-png.flaticon.com/512/145/145813.png"></a>
+<a href="https://www.tiktok.com/@corner_lie" target="_blank"><img src="https://cdn-icons-png.flaticon.com/512/3046/3046128.png"></a>
 </div>
 </section>
 
@@ -272,58 +281,43 @@ footer {
 </footer>
 
 <script>
-/* SLIDER */
-let slides = document.querySelectorAll('.slide');
-let i = 0;
-setInterval(() => {
-  slides[i].classList.remove('active');
-  i = (i + 1) % slides.length;
-  slides[i].classList.add('active');
-}, 4000);
-
 /* MUSIC */
 const music = document.getElementById("bgMusic");
 const musicBtn = document.getElementById("musicBtn");
+
 musicBtn.onclick = () => {
-  if (music.paused) {
-    music.volume = 0.2;
-    music.play();
-    musicBtn.textContent = "🔊 Музыка";
-  } else {
-    music.pause();
-    musicBtn.textContent = "🔈 Музыка";
-  }
+    if (music.paused) {
+        music.volume = 0.25;
+        music.play();
+        musicBtn.textContent = "🔇 Выключить музыку";
+    } else {
+        music.pause();
+        musicBtn.textContent = "🎵 Включить музыку";
+    }
 };
 
 /* ADMIN */
 const PASSWORD = "admin123";
+const upload = document.getElementById("upload");
+
 document.getElementById("adminBtn").onclick = () => {
-  if (prompt("Пароль администратора") === PASSWORD) {
-    document.getElementById("upload").style.display = "block";
-  }
+    if (prompt("Введите пароль администратора") === PASSWORD) {
+        upload.style.display = "block";
+        alert("Админ-режим включён");
+    }
 };
 
-document.getElementById("upload").onchange = e => {
-  const r = new FileReader();
-  r.onload = () => {
-    document.getElementById("img1").src = r.result;
-    localStorage.photo = r.result;
-  };
-  r.readAsDataURL(e.target.files[0]);
+upload.onchange = e => {
+    const reader = new FileReader();
+    reader.onload = () => {
+        document.getElementById("photo1").src = reader.result;
+        localStorage.photo1 = reader.result;
+    };
+    reader.readAsDataURL(e.target.files[0]);
 };
 
-if (localStorage.photo) {
-  document.getElementById("img1").src = localStorage.photo;
-}
-
-/* PWA */
-if ('serviceWorker' in navigator) {
-  const sw = new Blob([`
-    self.addEventListener('fetch', e => {
-      e.respondWith(caches.match(e.request).then(r => r || fetch(e.request)));
-    });
-  `], {type:'text/javascript'});
-  navigator.serviceWorker.register(URL.createObjectURL(sw));
+if (localStorage.photo1) {
+    document.getElementById("photo1").src = localStorage.photo1;
 }
 </script>
 
